fixed the spacing between the notes

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ p {
 
 .card {
     width: 80%;
-    margin: 400 px auto;
+    margin: 40px auto;
     border: 5px solid gray;
     box-shadow: 5px 10px #888888
 }
